new version - GDM Generic Discriminator Multi-tenancy